fix: focus visible only on keyboard select

--- a/src/style/foundation/base.less
+++ b/src/style/foundation/base.less
@@ -65,8 +65,8 @@ body {
 * {
   outline: none;
 
-  &:focus {
-    outline: 2px solid Highlight;
+  &:focus-visible {
+    outline: 2px solid highlight;
   }
 }
 
